[gd_scene load_steps=16 format=3 uid="uid://bhed0ibw2ejfk"]

[ext_resource type="Script" path="res://script/menu/menu.gd" id="1_8ajuc"]
[ext_resource type="FontFile" uid="uid://dv7knpgvw8dei" path="res://font/Gabarito-VariableFont_wght.ttf" id="1_jcaff"]
[ext_resource type="Texture2D" uid="uid://4ug5f0s2fdu0" path="res://assets/icon/MusicNotes.svg" id="3_mlkpi"]
[ext_resource type="PackedScene" uid="uid://fr7nqgkiqknc" path="res://scene/ui/volume_slider.tscn" id="4_l0o1e"]
[ext_resource type="Texture2D" uid="uid://dufpnngkkcupp" path="res://assets/icon/SfxNote.svg" id="5_0nogq"]
[ext_resource type="AudioStream" uid="uid://b6qsifmndjt1k" path="res://sound/music/theleafturnthemself.mp3" id="6_246kq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tg7c5"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.203922, 0.286275, 0.333333, 1)
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color(0.235294, 0.32549, 0.376471, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="Theme" id="Theme_e3k12"]
default_font = ExtResource("1_jcaff")
Panel/styles/panel = SubResource("StyleBoxFlat_tg7c5")

[sub_resource type="LabelSettings" id="LabelSettings_wipd0"]
font = ExtResource("1_jcaff")
font_size = 48

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b8bw7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cx0ep"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_top = 12
border_color = Color(0.235294, 0.32549, 0.376471, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r4bwd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kbi4a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jxwxu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y03po"]
bg_color = Color(0.133333, 0.184314, 0.215686, 1)

[node name="Menu" type="Control"]
process_mode = 3
light_mask = 0
visibility_layer = 1048575
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ajuc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="PanelMenu" type="Panel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.0
offset_top = -249.0
offset_right = 249.0
offset_bottom = 249.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_e3k12")

[node name="Label" type="Label" parent="CanvasLayer/PanelMenu"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 40.0
offset_right = 60.0
grow_horizontal = 2
text = "Menu
"
label_settings = SubResource("LabelSettings_wipd0")

[node name="Settings" type="VBoxContainer" parent="CanvasLayer/PanelMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -215.0
offset_right = 216.0
offset_bottom = 294.0
grow_horizontal = 2
theme_override_constants/separation = 12
alignment = 2

[node name="FullScreen" type="HBoxContainer" parent="CanvasLayer/PanelMenu/Settings"]
layout_mode = 2
theme_override_constants/separation = 36

[node name="Label" type="Label" parent="CanvasLayer/PanelMenu/Settings/FullScreen"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Fullscreen
"

[node name="CheckButton" type="CheckButton" parent="CanvasLayer/PanelMenu/Settings/FullScreen"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_b8bw7")
action_mode = 0

[node name="Content1" type="HBoxContainer" parent="CanvasLayer/PanelMenu/Settings"]
layout_mode = 2
theme_override_constants/separation = 36

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PanelMenu/Settings/Content1"]
texture_filter = 2
layout_mode = 2
texture = ExtResource("3_mlkpi")

[node name="musics" parent="CanvasLayer/PanelMenu/Settings/Content1" instance=ExtResource("4_l0o1e")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
bus_name = "music"

[node name="Content2" type="HBoxContainer" parent="CanvasLayer/PanelMenu/Settings"]
layout_mode = 2
theme_override_constants/separation = 36

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PanelMenu/Settings/Content2"]
texture_filter = 2
layout_mode = 2
texture = ExtResource("5_0nogq")

[node name="sfx" parent="CanvasLayer/PanelMenu/Settings/Content2" instance=ExtResource("4_l0o1e")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
bus_name = "sfx"

[node name="Panel" type="Panel" parent="CanvasLayer/PanelMenu"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -165.0
offset_right = -12.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_cx0ep")

[node name="MainMenu" type="VBoxContainer" parent="CanvasLayer/PanelMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 13.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Restart" type="Button" parent="CanvasLayer/PanelMenu/Panel/MainMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4bwd")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kbi4a")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jxwxu")
theme_override_styles/focus = SubResource("StyleBoxFlat_y03po")
text = "Restart"

[node name="Back to Hub" type="Button" parent="CanvasLayer/PanelMenu/Panel/MainMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4bwd")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kbi4a")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jxwxu")
theme_override_styles/focus = SubResource("StyleBoxFlat_y03po")
text = "Back to Hub"

[node name="Exit Game" type="Button" parent="CanvasLayer/PanelMenu/Panel/MainMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4bwd")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kbi4a")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jxwxu")
theme_override_styles/focus = SubResource("StyleBoxFlat_y03po")
text = "Exit Games"

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_246kq")
bus = &"music"

[node name="sound_effect" type="AudioStreamPlayer2D" parent="."]
bus = &"sfx"

[connection signal="toggled" from="CanvasLayer/PanelMenu/Settings/FullScreen/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="CanvasLayer/PanelMenu/Panel/MainMenu/Exit Game" to="." method="_on_exit_game_pressed"]
